src/tests/fixtures/field_values/DuplicateFields.ts.expected
-----------------
INPUT
----------------- 
// @ts-nocheck

/** @gqlType */
export default class Query {
  /** @gqlField */
  hello(): string {
    return "Hello world!";
  }
  /** @gqlField */
  hello(): Array<string> {
    return ["Hello world!"];
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_values/DuplicateFields.ts:6:3 - error: Field "Query.hello" can only be defined once.

6   hello(): string {
    ~
